Remove public business details